# gocator_final

./: .gitignore  CITATION.cff  README.md
gocator_bridge/: CMakeLists.txt  package.xml
gocator_bridge/bagfiles/: state.txt
gocator_bridge/include/custom_lib/: custom.h
gocator_bridge/launch/: startup.launch
gocator_bridge/rviz/: profile.rviz
gocator_bridge/scripts/: view.py
gocator_bridge/src/: get_profile.cpp  get_surface_filtered.cpp  get_surface_robot.cpp  reconstruct_pcl.cpp  show_sensor_boundries.cpp
gocator_sim/: CMakeLists.txt  package.xml
gocator_sim/launch/: real.launch  robot40.launch  sim.launch  surface.launch
gocator_sim/rviz/: sim.rviz
gocator_sim/scripts/: ros_gui.py
gocator_sim/src/: move_arm.cpp  move_arm_init.cpp  move_trajectory.cpp  send_command.cpp
